Adding new effects to background

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="title">Let's Play</h1>
+      <h1 class="title top-frame">Let's Play</h1>
       <br />
-      <h3 id="best-score"></h3>
-      <div class="information">
+      <h3 id="best-score" class="top-frame"></h3>
+      <div class="information top-frame">
         <span id="level"></span>
         <span id="timer"></span>
         <span id="score"></span>
       </div>
-      <div id="game"></div>
-      <div class="information">
-        <div id="stop" class="btn">STOP</div>
-        <div id="play" class="btn btn-main">PLAY</div>
-        <div id="clear" class="btn">CLEAR</div>
+      <div id="game" class="top-frame"></div>
+      <div class="information top-frame">
+        <div id="stop" class="btn glass-box">STOP</div>
+        <div id="play" class="btn glass-box btn-main">PLAY</div>
+        <div id="clear" class="btn glass-box">CLEAR</div>
       </div>
     </div>
     <script src="./main.js"></script>
